fixed piaget and sbsod for small screens

--- a/client/scss/_sizes.scss
+++ b/client/scss/_sizes.scss
@@ -1,2 +1,14 @@
 $border-radius: .4rem;
+
+// BUTTONS
 $button-size: min(3.5rem, 15vw, 15vh);
+
+// PAGES
+$max-height: 40rem;
+$max-width: 25rem;
+
+$font-size-small: min(3.5vw, .9rem);
+$font-size-regular: min(4vw, 1rem);
+$font-size-title: min(5vw, 1.2rem);
+
+$gap1rem: min(1rem, 3vh);
