--- a/client/scss/experiences/_piaget.scss
+++ b/client/scss/experiences/_piaget.scss
@@ -6,40 +6,28 @@ $stroke-width: .4rem;
 $circle-radius: .6rem;
 
 .piaget-tutorial {
-    padding: 0 1rem;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+    gap: sizes.$gap1rem;
+    padding: 0 sizes.$gap1rem;
     text-align: center;
-
-    &:first-child {
-        margin-top: 1rem;
-    }
-
-    &:last-child {
-        margin-bottom: 1rem;
-    }
+    font-size: sizes.$font-size-regular;
 }
 
 .piaget-title {
-    margin-top: 1rem;
     font-family: 'Vincendo';
-    font-size: 1.2rem;
+    font-size: sizes.$font-size-title;
 }
 
 .piaget-bottle {
     position: relative;
-    margin: 0 1rem 1rem 1rem;
+    overflow: hidden;
+
     background-color: colors.$main-color-light;
     border-radius: sizes.$border-radius;
 
     &>svg {
-        aspect-ratio: 1 / 1;
-        width: min(40vw, 20vh);
-        height: min(40vw, 20vh);
-        max-width: 15rem;
-        max-height: 15rem;
-        display: block;
+        height: 100%;
+        width: auto;
+        aspect-ratio: 1/1;
 
         &>.bottle {
             color: transparent;
@@ -59,11 +47,12 @@ $circle-radius: .6rem;
     top: 0;
     left: 0;
     height: 100%;
-    width: 100%;
+    width: auto;
 
     &>svg {
-        height: inherit;
-        width: inherit;
+        height: 100%;
+        width: 100%;
+        aspect-ratio: 1/1;
 
         &>circle {
             fill: $water-color;
