--- a/client/scss/pages/_credits.scss
+++ b/client/scss/pages/_credits.scss
@@ -104,7 +104,7 @@
     justify-content: center;
     gap: 1rem;
     width: 100%;
-    font-size: 4vw;
+    font-size: sizes.$font-size-regular;
 }
 
 .credits-role {
@@ -203,11 +203,5 @@
     &.pop {
         transform: scale(1);
         transition: transform .3s cubic-bezier(0.34, 1.56, 0.64, 1);
-    }
-}
-
-@media screen and (min-width: 400px) {
-    .credits-entry {
-        font-size: 1rem;
     }
 }
