--- a/client/scss/pages/_buttons.scss
+++ b/client/scss/pages/_buttons.scss
@@ -97,7 +97,7 @@
 
 .page-button {
     font-family: 'Vincendo';
-    font-size: .9rem;
+    font-size: sizes.$font-size-small;
     pointer-events: all;
 
     display: flex;
