--- a/client/scss/_sizes.scss
+++ b/client/scss/_sizes.scss
@@ -1,4 +1,4 @@
-$border-radius: .4rem;
+$border-radius: min(.4rem, 2vh, 2vw);
 
 // BUTTONS
 $button-size: min(3.5rem, 15vw, 15vh);
@@ -7,8 +7,11 @@ $button-size: min(3.5rem, 15vw, 15vh);
 $max-height: 40rem;
 $max-width: 25rem;
 
+$font-size-extrasmall: min(3vw, .8rem);
 $font-size-small: min(3.5vw, .9rem);
 $font-size-regular: min(4vw, 1rem);
 $font-size-title: min(5vw, 1.2rem);
+$font-size-score: min(6vw, 1.6rem);
 
-$gap1rem: min(1rem, 3vh);
+$gap1rem: min(1rem, 2vh);
+$gap2rem: min(2rem, 4vh);
