--- a/client/scss/pages/_consent.scss
+++ b/client/scss/pages/_consent.scss
@@ -1,15 +1,17 @@
 @use '../colors';
+@use '../sizes';
 
 .consent-text {
     width: 100%;
+    font-size: sizes.$font-size-regular;
 
     pointer-events: all;
-    border-top-right-radius: .4rem;
-    border-bottom-left-radius: .4rem;
+    border-top-right-radius: sizes.$border-radius;
+    border-bottom-left-radius: sizes.$border-radius;
 
     background-color: colors.$secondary-color-dark;
     color: colors.$main-color-light;
-    
+
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -20,20 +22,20 @@
 
 .consent-title {
     font-family: 'Vincendo';
-    font-size: 6vw;
+    font-size: sizes.$font-size-title;
     text-align: center;
 
-    padding: 1rem;
+    padding: sizes.$gap1rem;
 }
 
 .consent-elements {
-    padding: 0 1rem;
+    padding: 0 sizes.$gap1rem;
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: sizes.$gap1rem;
 }
 
-.consent-list > ul {
+.consent-list>ul {
     margin-top: .5rem;
     margin-bottom: 0;
     padding-left: 1.5rem;
@@ -48,14 +50,15 @@
     height: 2rem;
 
     &.checked {
-        & > .consent-checkbox-button {
-            height: 1.2rem;
-            width: 1.2rem;
+        &>.consent-checkbox-button {
+            height: sizes.$font-size-title;
+            width: sizes.$font-size-title;
             background-color: colors.$main-color-dark;
             box-shadow: inset 0 0 .2rem colors.$main-color-light;
         }
-        & > .consent-checkbox-label {
-            font-size: 1.2rem;
+
+        &>.consent-checkbox-label {
+            font-size: sizes.$font-size-title;
         }
     }
 }
@@ -79,8 +82,8 @@
     font-family: 'Vincendo';
     text-align: justify;
     margin-left: .6rem;
-    font-size: 1rem;
-    line-height: 1.2rem;
+    font-size: sizes.$font-size-regular;
+    line-height: sizes.$font-size-title;
 
     transition: all .2s cubic-bezier(0.34, 1.56, 0.64, 1);
 }
@@ -88,23 +91,19 @@
 .consent-scroll-indicator {
     width: 100%;
     height: 0;
-    margin-top: 1.5rem;
+    margin-top: sizes.$font-size-title;
     flex-grow: 0;
     flex-shrink: 0;
     overflow: hidden;
-    font-size: .9rem;
-    line-height: 1.5rem;
+    font-size: sizes.$font-size-small;
+    line-height: sizes.$font-size-title;
     text-align: center;
-    
+
     background-color: colors.$main-color-light;
     color: colors.$main-color-dark;
     transition: .2s height ease-in-out;
 
     &.active {
-        height: 1.5rem;
+        height: sizes.$font-size-title;
     }
-}
-
-@media screen and (min-width: 500px) {
-    .consent-title { font-size: 2rem; }
 }
