--- a/client/scss/pages/_elements.scss
+++ b/client/scss/pages/_elements.scss
@@ -32,8 +32,8 @@
     }
 }
 
-$margin: 1rem;
-$margin-top: calc(sizes.$button-size + 2rem - 1.9rem);
+$margin: sizes.$gap1rem;
+$margin-top: calc(sizes.$button-size + 2*sizes.$gap1rem);
 
 .page-content {
     margin-top: $margin-top;
@@ -55,13 +55,12 @@ $margin-top: calc(sizes.$button-size + 2rem - 1.9rem);
         transition: transform .3s cubic-bezier(0.075, 0.495, 0.320, 1.225);
     }
 
-    &.ptsot {
-        height: calc(100% - 10vh);
-        justify-content: flex-start;
-    }
-
     &.rabbits {
         position: absolute;
+    }
+
+    &.ptsot {
+        height: 100%;
     }
 }
 
@@ -70,15 +69,15 @@ $margin-top: calc(sizes.$button-size + 2rem - 1.9rem);
     z-index: 50;
     left: 0;
 
-    width: calc(100% - 2rem);
+    width: calc(100% - 2*sizes.$gap1rem);
     pointer-events: none;
 
     display: flex;
     justify-content: space-between;
     align-items: center;
 
-    padding: 1rem;
-    gap: 1rem;
+    padding: sizes.$gap1rem;
+    gap: sizes.$gap1rem;
 
     &.line {
         flex-direction: row;
@@ -115,7 +114,7 @@ $margin-top: calc(sizes.$button-size + 2rem - 1.9rem);
     flex-direction: column;
     justify-content: center;
 
-    gap: 1rem;
+    gap: sizes.$gap1rem;
 
     &.center {
         align-items: center;
