--- a/client/scss/_animations.scss
+++ b/client/scss/_animations.scss
@@ -425,6 +425,20 @@
     }
 }
 
+@keyframes ending-continue {
+    0% {
+        transform: scale(1);
+    }
+
+    50% {
+        transform: scale(0.96);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
+
 @keyframes phase-continue {
     0% {
         transform: scale(1);
