hint during phase 1 now indicates if you need to zoom more

--- a/client/scss/_sizes.scss
+++ b/client/scss/_sizes.scss
@@ -13,5 +13,5 @@ $font-size-regular: min(4vw, 4vh, 1rem);
 $font-size-title: min(5vw, 5vh, 1.2rem);
 $font-size-score: min(6vw, 6vh, 1.6rem);
 
-$gap1rem: min(1rem, 2vh, 4vw);
-$gap2rem: min(2rem, 4vh, 8vw);
+$gap1rem: min(1rem, 4vw, 2vh);
+$gap2rem: min(2rem, 8vw, 4vh);
