--- a/client/scss/game/_tutorial.scss
+++ b/client/scss/game/_tutorial.scss
@@ -74,12 +74,12 @@
 .paloma-character {
     display: flex;
     justify-content: center;
-    height: 8rem;
+    height: min(40vw, 40vh, 8rem);
     width: 100%;
 
     &>img {
-        width: 8rem;
-        height: 8rem;
+        width: min(40vw, 40vh, 8rem);
+        height: min(40vw, 40vh, 8rem);
         image-rendering: pixelated;
     }
 
@@ -99,8 +99,8 @@
 
 .paloma-bubble-container {
     position: absolute;
-    top: -.5rem;
-    margin: 0 1rem;
+    top: calc(-1 * (sizes.$gap1rem / 2));
+    margin: 0 sizes.$gap1rem;
 
     opacity: 0;
     transform-origin: 50% -50%;
@@ -122,7 +122,8 @@
 .paloma-bubble {
     position: relative;
     text-align: center;
-    max-width: 80vw;
+    max-width: min(80vw, 20rem);
+    font-size: sizes.$font-size-regular;
 
     padding: .6rem .8rem;
     color: colors.$grey-dark;
@@ -147,7 +148,6 @@
         background-color: colors.$grey-medium;
 
         &::before {
-
             background-color: colors.$grey-medium;
         }
     }
@@ -156,7 +156,8 @@
 .paloma-infos {
     position: absolute;
     bottom: 0;
-    margin: 0 1rem;
+    margin: 0 sizes.$gap1rem;
+    font-size: sizes.$font-size-regular;
     transform: translateY(100%);
 
     color: colors.$grey-extralight;
