handle opening the app inside a WebView

--- a/client/scss/_interface.scss
+++ b/client/scss/_interface.scss
@@ -120,4 +120,11 @@
     background-color: colors.$main-color-light;
     color: colors.$main-color-dark;
     padding: .5rem .8rem;
+
+    &>a {
+        cursor: default;
+        text-decoration: none;
+        font-weight: normal;
+        color: colors.$main-color-dark;
+    }
 }
